Feature: Register & Login Customer, CRUD Spot & Servive